Fixed bad CSS alignment in IE7 on home page [#104 tagged:committed responsible:dmorrison]

--- a/public/stylesheets/rating.css
+++ b/public/stylesheets/rating.css
@@ -61,6 +61,5 @@
 }  
 .star-ratings-block {  
     font-size: .75em;  
-    text-align: center;  
-    width: 100%;  
+    text-align: center;
 } 
